--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,3 +1,5 @@
-#database.url = jdbc:mysql://localhost/phonebook_db?createDatabaseIfNotExist=true
-#database.username=root
-#database.password=seriki@64
+spring.datasource.url=jdbc:mysql://localhost/phonebook_db?createDatabaseIfNotExist=true
+database.username=root
+database.password=seriki@64
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
