extended the jpa repository

--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/phonebook_db?createDatabaseIfNotExist=true
-database.username=root
-database.password=seriki@64
+spring.datasource.username=root
+spring.datasource.password=seriki@64
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
